--- a/package.json
+++ b/package.json
@@ -1,43 +1,30 @@
 {
   "name": "eco-vigia-rd",
   "version": "0.1.0",
-  "private": true,
+  "description": "Aplicación móvil para el Ministerio de Medio Ambiente RD - Desarrollado por estudiantes del ITLA",
+  "author": "Equipo Eco Vigía RD",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "axios": "^1.13.2",
+    "core-js": "^3.8.0",
+    "leaflet": "^1.9.4",
+    "pinia": "^3.0.4",
+    "vue": "^3.3.0",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@types/axios": "^0.9.36",
+    "@types/leaflet": "^1.9.21",
+    "@types/vue-router": "^2.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.9",
+    "@vue/cli-service": "^5.0.0",
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.6",
+    "typescript": "^5.0.0"
+  }
 }
