--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "axios": "^1.13.2",
     "core-js": "^3.8.0",
@@ -21,7 +24,7 @@
     "@types/axios": "^0.9.36",
     "@types/leaflet": "^1.9.21",
     "@types/vue-router": "^2.0.0",
-    "@vue/cli-plugin-typescript": "^5.0.9",
+    "@vue/cli-plugin-typescript": "^3.12.1",
     "@vue/cli-service": "^5.0.0",
     "sass": "^1.94.2",
     "sass-loader": "^16.0.6",
