--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
   "name": "eco-vigia-rd",
-  "version": "0.1.0",
-  "description": "Aplicación móvil para el Ministerio de Medio Ambiente RD - Desarrollado por estudiantes del ITLA",
-  "author": "Equipo Eco Vigía RD",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "vue-cli-service serve"
+    "dev": "vue-cli-service serve --open",
+    "clean": "rimraf dist node_modules/.cache",
+    "lint": "vue-cli-service lint",
+    "fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@capacitor/android": "^7.4.4",
-    "@capacitor/cli": "^7.4.4",
-    "@capacitor/core": "^7.4.4",
-    "@fortawesome/fontawesome-free": "^7.1.0",
-    "axios": "^1.13.2",
-    "core-js": "^3.8.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "pinia": "^2.1.6",
+    "axios": "^1.6.2",
+    "@capacitor/core": "^5.5.0",
+    "@capacitor/android": "^5.5.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "leaflet": "^1.9.4",
-    "pinia": "^3.0.4",
-    "vue": "^3.3.0",
-    "vue-router": "^4.6.3"
+    "@vue-leaflet/vue-leaflet": "^0.9.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/leaflet": "^1.9.21",
-    "@types/vue-router": "^2.0.0",
-    "@vue/cli-plugin-typescript": "^3.12.1",
-    "@vue/cli-service": "^5.0.0",
-    "sass": "^1.94.2",
-    "sass-loader": "^16.0.6",
-    "typescript": "^5.0.0"
+    "@vue/cli-service": "^5.0.8",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
+    "typescript": "~4.9.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@types/leaflet": "^1.9.7",
+    "rimraf": "^5.0.5"
   }
 }
