--- a/package.json
+++ b/package.json
@@ -11,31 +11,36 @@
     "fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@capacitor/android": "^5.5.0",
+    "@capacitor/core": "^5.5.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@vue-leaflet/vue-leaflet": "^0.7.0",
+    "axios": "^1.6.2",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
-    "axios": "^1.6.2",
-    "@capacitor/core": "^5.5.0",
-    "@capacitor/android": "^5.5.0",
-    "@fortawesome/fontawesome-free": "^6.4.2",
-    "leaflet": "^1.9.4",
-    "@vue-leaflet/vue-leaflet": "^0.9.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-typescript": "^5.0.8",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/compiler-sfc": "^3.3.4",
-    "typescript": "~4.9.5",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "eslint": "^8.47.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/leaflet": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
-    "@types/leaflet": "^1.9.7",
-    "rimraf": "^5.0.5"
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "rimraf": "^5.0.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "typescript": "~4.9.5"
   }
 }
