--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@capacitor/android": "^5.5.0",
-    "@capacitor/core": "^5.5.0",
+    "@capacitor/android": "^5.7.8",
+    "@capacitor/cli": "^8.0.0",
+    "@capacitor/core": "^5.7.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@vue-leaflet/vue-leaflet": "^0.7.0",
     "axios": "^1.6.2",
